Updated gulp file w/ Babel and fixed logout display issue on mobile view

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -71,17 +71,8 @@ button {
 }
 
 #logOutBtn {
-	display: none;
-
-	@include breakpoint($large) {
-		display: block;
-		padding: 5px 10px;
-	}
-
-	@include breakpoint($medium) {
-		display: block;
-		padding: 5px 10px;
-	}
+	display: block;
+	padding: 5px 10px;
 }
 
 /* HEADER STYLES */
